--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-
+# tell Angular to ignore some items listed in these files.
+environment.ts
 # compiled output
 /dist
 /tmp
